add ckeck list section
