# app/Http/Controllers/CheckListController.php
@@ -3,63 +3,324 @@
 namespace App\Http\Controllers;
 
 use App\Models\CheckList;
+use Exception;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Log;
 
 class CheckListController extends Controller
 {
     /**
-     * Display a listing of the resource.
+     * @OA\Get(
+     *     path="/check",
+     *     tags={"CheckList"},
+     *     summary="check list all types",
+     *     description="check list all Item ( you must be admin)",
+     *     @OA\Parameter(
+     *         name="page",
+     *         in="query",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string",
+     *             default="1"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Success Message",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="current_page",
+     *                 type="integer",
+     *                 format="int32",
+     *                 description="Current page number"
+     *             ),
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="array",
+     *                 @OA\Items(ref="#/components/schemas/ConfigModel"),
+     *                 description="List of item"
+     *             ),
+     *             @OA\Property(
+     *                 property="first_page_url",
+     *                 type="string",
+     *                 format="uri",
+     *                 description="First page URL"
+     *             ),
+     *             @OA\Property(
+     *                 property="from",
+     *                 type="integer",
+     *                 format="int32",
+     *                 description="First item number in the current page"
+     *             ),
+     *             @OA\Property(
+     *                 property="last_page",
+     *                 type="integer",
+     *                 format="int32",
+     *                 description="Last page number"
+     *             ),
+     *             @OA\Property(
+     *                 property="links",
+     *                 type="array",
+     *                 @OA\Items(
+     *                     oneOf={
+     *                         @OA\Schema(ref="#/components/schemas/Previous"),
+     *                         @OA\Schema(ref="#/components/schemas/Links"),
+     *                         @OA\Schema(ref="#/components/schemas/Next")
+     *                     }
+     *                 ),
+     *                 description="Links"
+     *             ),
+     *             @OA\Property(
+     *                 property="last_page_url",
+     *                 type="string",
+     *                 format="uri",
+     *                 description="Last page URL"
+     *             ),
+     *             @OA\Property(
+     *                 property="next_page_url",
+     *                 type="string",
+     *                 format="uri",
+     *                 description="Next page URL"
+     *             ),
+     *             @OA\Property(
+     *                 property="path",
+     *                 type="string",
+     *                 description="Path"
+     *             ),
+     *             @OA\Property(
+     *                 property="per_page",
+     *                 type="integer",
+     *                 format="int32",
+     *                 description="Items per page"
+     *             )
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="an ""unexpected"" error",
+     *         @OA\JsonContent(ref="#/components/schemas/ErrorModel"),
+     *     ),security={{"api_key": {}}}
+     * )
+     * Display the specified resource.
      */
     public function index()
     {
-        //
+        try {
+            return $this->success(CheckList::paginate(10));
+        } catch (\Throwable $th) {
+            return $this->error($th->getMessage());
+        }
     }
 
     /**
-     * Show the form for creating a new resource.
-     */
-    public function create()
-    {
-        //
-    }
-
-    /**
+     * @OA\Post(
+     *     path="/check",
+     *     tags={"CheckList"},
+     *     summary="MakeOneItem",
+     *     description="make one Item",
+     *     @OA\RequestBody(
+     *         description="tasks input",
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="config_id",
+     *                 type="integer",
+     *                 description="config id",
+     *             ),
+     *             @OA\Property(
+     *                 property="operator_id",
+     *                 type="integer",
+     *                 description="operator id",
+     *             ),
+     *             @OA\Property(
+     *                 property="healthy",
+     *                 type="integer",
+     *                 description="healthy config",
+     *             ),
+     *             @OA\Property(
+     *                 property="down",
+     *                 type="integer",
+     *                 description="down config",
+     *             ),
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Success Message",
+     *         @OA\JsonContent(ref="#/components/schemas/SuccessModel"),
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="an 'unexpected' error",
+     *         @OA\JsonContent(ref="#/components/schemas/ErrorModel"),
+     *     ),security={{"api_key": {}}}
+     * )
      * Store a newly created resource in storage.
      */
     public function store(Request $request)
     {
-        //
+        $dataValidated = $request->validate([
+            'config_id'     => 'required|numeric',
+            'operator_id'   => 'required|numeric',
+            'healthy'       => 'required|numeric',
+            'down'          => 'required|numeric'
+        ]);
+        try {
+            $check = CheckList::create($dataValidated);
+            return $this->success($check);
+        } catch (Exception $e) {
+            Log::error($e->getMessage());
+        }
     }
 
     /**
+     * @OA\Get(
+     *     path="/check/{id}",
+     *     tags={"CheckList"},
+     *     summary="getOneItem",
+     *     description="get One Item",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Success Message",
+     *         @OA\JsonContent(ref="#/components/schemas/SuccessModel"),
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="an ""unexpected"" error",
+     *         @OA\JsonContent(ref="#/components/schemas/ErrorModel"),
+     *     ),security={{"api_key": {}}}
+     * )
      * Display the specified resource.
      */
-    public function show(CheckList $checkList)
+    public function show(int $id)
     {
-        //
+        try {
+            $check = CheckList::findOrFail($id);
+            return $this->success($check);
+        } catch (Exception $e) {
+            Log::error($e->getMessage());
+        }
     }
 
     /**
-     * Show the form for editing the specified resource.
-     */
-    public function edit(CheckList $checkList)
-    {
-        //
-    }
-
-    /**
+     * @OA\Put(
+     *     path="/check/{id}",
+     *     tags={"CheckList"},
+     *     summary="EditOneItem",
+     *     description="edit one Item",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         description="tasks input",
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="config_id",
+     *                 type="integer",
+     *                 description="config id",
+     *             ),
+     *             @OA\Property(
+     *                 property="operator_id",
+     *                 type="integer",
+     *                 description="operator id",
+     *             ),
+     *             @OA\Property(
+     *                 property="healthy",
+     *                 type="integer",
+     *                 description="healthy config",
+     *             ),
+     *             @OA\Property(
+     *                 property="down",
+     *                 type="integer",
+     *                 description="down config",
+     *             ),
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Success Message",
+     *         @OA\JsonContent(ref="#/components/schemas/SuccessModel"),
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="an 'unexpected' error",
+     *         @OA\JsonContent(ref="#/components/schemas/ErrorModel"),
+     *     ),security={{"api_key": {}}}
+     * )
      * Update the specified resource in storage.
      */
-    public function update(Request $request, CheckList $checkList)
+    public function update(Request $request, int $id)
     {
-        //
+        $dataValidated = $request->validate([
+            'config_id'     => 'nullable|numeric',
+            'operator_id'   => 'nullable|numeric',
+            'healthy'       => 'nullable|numeric',
+            'down'          => 'nullable|numeric'
+        ]);
+        try {
+            $check = CheckList::findOrFail($id);
+            $check->update($dataValidated);
+            return $this->success([
+                'edited'=> true,
+                'check' => $check
+            ]);
+        } catch (Exception $e) {
+            Log::error($e->getMessage());
+        }
     }
 
     /**
+     * @OA\Delete(
+     *     path="/check/{id}",
+     *     tags={"CheckList"},
+     *     summary="DeleteOneItem",
+     *     description="Delete one Item",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Success Message",
+     *         @OA\JsonContent(ref="#/components/schemas/SuccessModel"),
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="an 'unexpected' error",
+     *         @OA\JsonContent(ref="#/components/schemas/ErrorModel"),
+     *     ),security={{"api_key": {}}}
+     * )
      * Remove the specified resource from storage.
      */
-    public function destroy(CheckList $checkList)
+    public function destroy(int $id)
     {
-        //
+        try {
+            $check = CheckList::findOrFail($id);
+            $check->delete();
+            return $this->success([
+                'deleted'=> true,
+                $check
+            ]);
+        } catch (Exception $e) {
+            Log::error($e->getMessage());
+        }
     }
 }
